[package]
name = "anomalie_detec"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
csv = "1.3.1"
linfa = "0.7.1"
linfa-clustering = "0.7.1"
linfa-preprocessing = "0.7.1"
ndarray = "0.16.1"
ndarray-csv = "0.5.3"
plotters = "0.3.7"
serde = {version="1.0.219", features = ["derive"]}
